compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__custom_types__constructor_as_value.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/custom_types.rs
assertion_line: 413
expression: "import other\npub fn main() {\n  other.Two\n}"
snapshot_kind: text
---
----- SOURCE CODE
-- other.gleam
pub type One { Two(a: Int, b: Int, c: Int) }

-- main.gleam
import other
pub fn main() {
  other.Two
}

----- COMPILED JAVASCRIPT
import * as $other from "../other.mjs";

export function main() {
  return (var0, var1, var2) => { return new $other.Two(var0, var1, var2); };
}
