compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__custom_types__destructure_custom_type_with_mixed_fields_first_unlabelled.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/custom_types.rs
assertion_line: 281
expression: "\npub type Cat {\n  Cat(String, cuteness: Int)\n}\n\npub fn go(cat) {\n  let Cat(x, y) = cat\n  let Cat(cuteness: y, ..) = cat\n  let Cat(x, cuteness: y) = cat\n  x\n}\n\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Cat {
  Cat(String, cuteness: Int)
}

pub fn go(cat) {
  let Cat(x, y) = cat
  let Cat(cuteness: y, ..) = cat
  let Cat(x, cuteness: y) = cat
  x
}



----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../gleam.mjs";

export class Cat extends $CustomType {
  constructor($0, cuteness) {
    super();
    this[0] = $0;
    this.cuteness = cuteness;
  }
}
export const Cat$Cat = ($0, cuteness) => new Cat($0, cuteness);
export const Cat$isCat = (value) => value instanceof Cat;
export const Cat$Cat$0 = (value) => value[0];
export const Cat$Cat$cuteness = (value) => value.cuteness;
export const Cat$Cat$1 = (value) => value.cuteness;

export function go(cat) {
  let x;
  let y;
  x = cat[0];
  y = cat.cuteness;
  let y$1;
  y$1 = cat.cuteness;
  let x$1;
  let y$2;
  x$1 = cat[0];
  y$2 = cat.cuteness;
  return x$1;
}
