compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__custom_types__imported_multiple_fields.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/custom_types.rs
assertion_line: 347
expression: "import other\npub fn main() {\n  other.Two(b: 2, c: 3, a: 1)\n}"
snapshot_kind: text
---
----- SOURCE CODE
-- other.gleam
pub type One { Two(a: Int, b: Int, c: Int) }

-- main.gleam
import other
pub fn main() {
  other.Two(b: 2, c: 3, a: 1)
}

----- COMPILED JAVASCRIPT
import * as $other from "../other.mjs";

export function main() {
  return new $other.Two(1, 2, 3);
}
